worked on the js files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="IMG-20231115-WA0057.jpg" alt="" class="nav-image" />
           <h1 class="nav-logo">OM</h1>
         </div>
-        <i class="bi bi-list icon1" onclick=" sliD1()"></i> 
+        <i class="bi bi-list icon1" onclick=" sliD1()"></i>
 
         <ul class="nav-ul">
           <i class="bi bi-x-lg icon2" onclick=" sliD1() "></i>
@@ -38,7 +38,9 @@
             <a href="#sec-section" class="nav-link"> Skills </a>
           </li>
           <button class="nav-button">
-            <a href="https://github.com/Mmesomaonuegbu0" target="_blank">learn more</a>
+            <a href="https://github.com/Mmesomaonuegbu0" target="_blank"
+              >learn more</a
+            >
           </button>
         </ul>
       </nav>
@@ -56,12 +58,14 @@
           <a href="https://t.co/GSqsnH16GO"><i class="bi bi-twitter"></i></a>
           <a href="https://t.co/w7TyBTGRsa"><i class="bi bi-github"></i></a>
           <a href="https://t.co/Yjuc9sR9RS"> <i class="bi bi-linkedin"></i></a>
-          <a href="mailto:mmesomaonuegbu9@gmail.com" data-testid="slackEmail"><i
-                  class="bi bi-envelope-at-fill"></i></a>
-
-      </div>
+          <a href="mailto:mmesomaonuegbu9@gmail.com" data-testid="slackEmail"
+            ><i class="bi bi-envelope-at-fill"></i
+          ></a>
+        </div>
         <button class="nav-button">
-          <a href="https://github.com/Mmesomaonuegbu0" target="_blank">learn more</a>
+          <a href="https://github.com/Mmesomaonuegbu0" target="_blank"
+            >learn more</a
+          >
         </button>
       </div>
 
@@ -76,7 +80,7 @@
       <div class="about-text2">
         <p class="lead">
           <b>
-           A junior front-end developer that wants to use her skill to build an
+            A junior front-end developer that wants to use her skill to build an
             engaging and user friendly websites hoping to get an opportunity to
             increase her knowledge and upskill herself in the front-end field.
             as a frontend web developer skilled in building high quality and
@@ -105,44 +109,36 @@
             <p><b>Name:</b> Onuegbu Mmesoma</p>
             <p><b>Phone:</b> 08130469278</p>
             <p><b>Email:</b> mmesomaonuegbu9@gmail.com</p>
-            <p><b>Github link:</b> https://github.com/Mmesomaonuegbu00</p>
+            <p><b>Github link:</b> https://github.com/Mmesoma
+              onuegbu00</p>
             <br />
             <button class="nav-button">
-              <a href="https://github.com/Mmesomaonuegbu0" target="_blank">learn more</a>
+              <a href="https://github.com/Mmesomaonuegbu0" target="_blank"
+                >learn more</a
+              >
             </button>
           </div>
         </div>
 
         <div class="skills">
           <h1 class="skill-text"><strong>SKILLLS</strong></h1>
-          <div class="skills1">
+
+          <div class="progress">
             <div>
-              <progress value="85" max="100"></progress>
               <h2>HTML</h2>
-            </div>
-            <div>
-              <progress value="75" max="100"></progress>
               <h2>CSS</h2>
-            </div>
-
-            <div>
-              <progress value="80" max="100"></progress>
               <h2>BOOTSRAP</h2>
-            </div>
-
-            <div>
-              <progress value="60" max="100"></progress>
               <h2>JAVASCRIPT</h2>
-            </div>
-
-            <div>
-              <progress value="50" max="100"></progress>
               <h2>REACT</h2>
-            </div>
-
-            <div>
-              <progress value="70" max="100"></progress>
               <h2>GIT</h2>
+            </div>
+            <div class="">
+              <progress value="85" max="100"></progress>
+              <progress value="75" max="100"></progress>
+              <progress value="80" max="100"></progress>
+              <progress value="60" max="100"></progress>
+              <progress value="50" max="100"></progress>
+              <progress value="70" max="100"></progress>
             </div>
           </div>
         </div>
@@ -156,27 +152,33 @@
           <img src="/Screenshot (2).png" alt="" />
           <h5>Course dashboard</h5>
           <p>A course dashboard for students</p>
-          <br>
+          <br />
           <button class="pro-button">
-            <a href="https://course-portal-eta.vercel.app/" target="_blank">click to veiw <i class="bi bi-arrow-up-right"></i></a>
+            <a href="https://course-portal-eta.vercel.app/" target="_blank"
+              >click to veiw <i class="bi bi-arrow-up-right"></i
+            ></a>
           </button>
         </div>
         <div class="project2">
           <img src="/Screenshot (3).png" alt="" />
           <h5>Fittness landing page</h5>
           <p>Fittness landing page for people to fit and healthy</p>
-          <br>
+          <br />
           <button class="pro-button">
-            <a href="https://fitness-weld.vercel.app/" target="_blank">click to veiw <i class="bi bi-arrow-up-right"></i></a>
+            <a href="https://fitness-weld.vercel.app/" target="_blank"
+              >click to veiw <i class="bi bi-arrow-up-right"></i
+            ></a>
           </button>
         </div>
         <div class="project3">
           <img src="/Screenshot (4).png" alt="" />
           <h5>Platform website</h5>
           <p>Tribe platform for business owners</p>
-          <br>
+          <br />
           <button class="pro-button">
-            <a href="https://platform2-teal.vercel.app/" target="_blank">click to veiw <i class="bi bi-arrow-up-right"></i></a>
+            <a href="https://platform2-teal.vercel.app/" target="_blank"
+              >click to veiw <i class="bi bi-arrow-up-right"></i
+            ></a>
           </button>
         </div>
       </div>
@@ -254,7 +256,8 @@
           <i class="bi bi-envelope-fill"></i>
           <span>
             <h2>Email</h2>
-            <p>mmesomaonuegbu9@gmail.com</p>
+            <p>mmesomaonuegbu
+              9@gmail.com</p>
           </span>
         </div>
         <div class="contact3">
@@ -293,9 +296,18 @@
     </div>
 
     <footer>
-      <img src="/MYXJ_20221208214625270_save (1).jpg" alt="" class="nav-image" />
+      <img
+        src="/MYXJ_20221208214625270_save (1).jpg"
+        alt=""
+        class="nav-image"
+      />
       <p>2024&copy; made by Mmesoma</p>
-      <img src="/MYXJ_20221208214625270_save (1).jpg" alt="" class="nav-image" />
+      <img
+        src="/MYXJ_20221208214625270_save (1).jpg"
+        alt=""
+        class="nav-image"
+      />
     </footer>
   </body>
+  <script src="script.js"></script>
 </html>
